book/tests/snapshots/snapshot__@language-features__strings-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from my_table\nselect x = \"\"\"\"\"I said \"\"\"hello world\"\"\"!\"\"\"\"\"\n"
input_file: book/tests/prql/language-features/strings-4.prql
---
SELECT
  'I said """hello world"""!' AS x
FROM
  my_table

