book/tests/snapshots/snapshot__@language-features__strings-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom my_table\nselect x = \"\\t\\tline ends here\\n \\\\ \"\n"
input_file: book/tests/prql/language-features/strings-5.prql
---
SELECT
  '		line ends here
 \ ' AS x
FROM
  my_table

