book/tests/snapshots/snapshot__@language-features__switch-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive distance = case [\n  city == \"Calgary\" -> 0,\n  city == \"Edmonton\" -> 300,\n]\n"
input_file: book/tests/prql/language-features/case-0.prql
---
SELECT
  *,
  CASE
    WHEN city = 'Calgary' THEN 0
    WHEN city = 'Edmonton' THEN 300
    ELSE NULL
  END AS distance
FROM
  employees
