book/tests/snapshots/snapshot__@language-features__syntax-10.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
input_file: book/tests/prql/language-features/syntax-10.prql
---
SELECT
  "first name"
FROM
  employees
