book/tests/snapshots/snapshot__@language-features__syntax-11.prql.snap
---
source: book/tests/snapshot.rs
expression: "from `dir/*.parquet`\n"
input_file: book/tests/prql/language-features/syntax-11.prql
---
SELECT
  *
FROM
  "dir/*.parquet"
