book/tests/snapshots/snapshot__@language-features__syntax-13.prql.snap
---
source: book/tests/snapshot.rs
expression: "from `music.albums`\n"
input_file: book/tests/prql/language-features/syntax-13.prql
---
SELECT
  *
FROM
  music.albums
