book/tests/snapshots/snapshot__@language-features__syntax-14.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter id == $1\n"
input_file: book/tests/prql/language-features/syntax-14.prql
---
SELECT
  *
FROM
  employees
WHERE
  id = $1
